---
title: Arquitectura Hexagonal - Módulo Documento bajo Personas (v3.50.1)
---

classDiagram
    direction TB

    namespace domain {
        class Documento {
            +Integer documentoId
            +String nombre
            +Integer guaraniTipoDocumento
        }

        class DocumentoRepository {
            << interface >>
            +findAll() List~Documento~
            +findById(Integer) Optional~Documento~
            +findFirstByGuaraniTipoDocumento(Integer) Optional~Documento~
        }
    }

    namespace application {
        class DocumentoService {
            -GetAllDocumentosUseCase getAllDocumentosUseCase
            -GetDocumentoByIdUseCase getDocumentoByIdUseCase
            -GetDocumentoByGuaraniTipoDocumentoUseCase getDocumentoByGuaraniTipoDocumentoUseCase
            +findAll() List~Documento~
            +findByDocumentoId(Integer) Documento
            +findFirstByGuaraniTipoDocumento(Integer) Documento
        }

    }
    namespace application_usecases {
            class GetAllDocumentosUseCaseImpl
            class GetDocumentoByIdUseCaseImpl
            class GetDocumentoByGuaraniTipoDocumentoUseCaseImpl
    }
    namespace application {

        class GetAllDocumentosUseCase { << interface >> }
        class GetDocumentoByIdUseCase { << interface >> }
        class GetDocumentoByGuaraniTipoDocumentoUseCase { << interface >> }
    }

    namespace infrastructure_persistence {
            class DocumentoEntity {
                +Integer documentoId
                +String nombre
                +Integer guaraniTipoDocumento
            }

            class JpaDocumentoRepository {
                << JpaRepository >>
                +findByDocumentoId(Integer) Optional~DocumentoEntity~
                +findFirstByGuaraniTipoDocumento(Integer) Optional~DocumentoEntity~
            }

            class JpaDocumentoRepositoryAdapter {
                -JpaDocumentoRepository repository
                -DocumentoMapper mapper
                +findAll() List~Documento~
                +findById(Integer) Optional~Documento~
                +findFirstByGuaraniTipoDocumento(Integer) Optional~Documento~
            }

            class DocumentoMapper {
                +toDomain(DocumentoEntity) Documento
                +toEntity(Documento) DocumentoEntity
            }
    }
    namespace infrastructure_web {
            class DocumentoController {
                -DocumentoService service
                -DocumentoDtoMapper dtoMapper
                +findAll() ResponseEntity~List~DocumentoResponse~~
                +findByDocumentoId(Integer) ResponseEntity~DocumentoResponse~
                +findFirstByGuaraniTipoDocumento(Integer) ResponseEntity~DocumentoResponse~
            }

            class DocumentoRequest
            class DocumentoResponse
            class DocumentoDtoMapper {
                +toDomain(DocumentoRequest) Documento
                +toResponse(Documento) DocumentoResponse
            }
    }

    DocumentoService --> GetAllDocumentosUseCase : uses
    DocumentoService --> GetDocumentoByIdUseCase : uses
    DocumentoService --> GetDocumentoByGuaraniTipoDocumentoUseCase : uses

    GetAllDocumentosUseCaseImpl ..|> GetAllDocumentosUseCase : implements
    GetDocumentoByIdUseCaseImpl ..|> GetDocumentoByIdUseCase : implements
    GetDocumentoByGuaraniTipoDocumentoUseCaseImpl ..|> GetDocumentoByGuaraniTipoDocumentoUseCase : implements

    GetAllDocumentosUseCaseImpl --> DocumentoRepository : uses
    GetDocumentoByIdUseCaseImpl --> DocumentoRepository : uses
    GetDocumentoByGuaraniTipoDocumentoUseCaseImpl --> DocumentoRepository : uses

    JpaDocumentoRepositoryAdapter ..|> DocumentoRepository : implements
    JpaDocumentoRepositoryAdapter --> JpaDocumentoRepository : uses
    JpaDocumentoRepositoryAdapter --> DocumentoMapper : uses

    DocumentoMapper --> Documento : maps
    DocumentoMapper --> DocumentoEntity : maps
    JpaDocumentoRepository --> DocumentoEntity : persists

    DocumentoController --> DocumentoService : calls
    DocumentoController --> DocumentoDtoMapper : uses
    DocumentoDtoMapper --> Documento : maps
    DocumentoDtoMapper --> DocumentoRequest : maps
    DocumentoDtoMapper --> DocumentoResponse : maps
